[project]
name = "nasa"
version = "0.1.0"
authors = [{ name="Raul Bras", email="@teknolista" }]
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.7.3",
    "pyyaml>=6.0.2",
    "babel>=2.17.0",
]
keywords = ["nasa", "neobasic", "programming", "language", "lsp", "linter", "autocompletion", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://neobasic.org"
Documentation = "https://en.neobasic.org/"
Repository = "https://github.com/neobasic/nasa.git"
Issues = "https://github.com/neobasic/nasa/issues"
Changelog = "https://github.com/neobasic/nasa/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build]
include = [
    "nasa/config/*.yaml",             # Include YAML files in the 'config' folder
    "nasa/config/*.conf",             # Include INI files in the 'config' folder
    "*.py",                           # Include all Python files
    "py.typed",                       # Include the 'py.typed' file
    "README.md",                      # Include the README file
    "LICENSE",                        # Include the LICENSE file
    "pyproject.toml",                 # Include the pyproject.toml file
]
